err/django-ecl-tools.err
Listing '.'...
Listing './README.rst'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_ecl_tools-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/ecl_tools'...
Listing './lib/python3.5/site-packages/ecl_tools/bulkmail'...
Listing './lib/python3.5/site-packages/ecl_tools/bulkmail/mailers'...
Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/mailers/mailgun.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/mailers/mailgun.py", line 52
    print len(keys[i:i+max_batch]) #for each chunk, include only the keys within that chunk
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ecl_tools/bulkmail/management'...
Listing './lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands'...
Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/dups.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/dups.py", line 19
    print "%s unique emails of %s total in list %s" % (len(unique_emails), subs.count(), list)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/import_list.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/import_list.py", line 26
    print 'Importing %s' % bulklist.name
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/pull_events.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/management/commands/pull_events.py", line 39
    print "No items found for query."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ecl_tools/bulkmail/migrations'...
Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/models.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/models.py", line 365
    print '%s %s send_bulkmail completed.' % (self.__class__.__name__, self.id)
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ecl_tools/bulkmail/resolvers'...
Compiling './lib/python3.5/site-packages/ecl_tools/bulkmail/tasks.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/bulkmail/tasks.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ecl_tools/config'...
Listing './lib/python3.5/site-packages/ecl_tools/config/middleware'...
Listing './lib/python3.5/site-packages/ecl_tools/config/templatetags'...
Listing './lib/python3.5/site-packages/ecl_tools/mail'...
Compiling './lib/python3.5/site-packages/ecl_tools/mail/core.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/mail/core.py", line 68
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ecl_tools/mail/migrations'...
Listing './lib/python3.5/site-packages/ecl_tools/security'...
Listing './lib/python3.5/site-packages/ecl_tools/security/middleware'...
Listing './lib/python3.5/site-packages/ecl_tools/utils'...
Listing './lib/python3.5/site-packages/ecl_tools/utils/management'...
Listing './lib/python3.5/site-packages/ecl_tools/utils/management/commands'...
Compiling './lib/python3.5/site-packages/ecl_tools/utils/management/commands/backupdb.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/utils/management/commands/backupdb.py", line 135
    print "Searching for backup at %s" % prefix
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecl_tools/utils/management/commands/history.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/utils/management/commands/history.py", line 15
    print "%s - %s: %s" % (e.action_time, e.user.username, e.change_message)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecl_tools/utils/management/commands/syncprod.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/utils/management/commands/syncprod.py", line 22
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ecl_tools/utils/templatetags'...
Compiling './lib/python3.5/site-packages/ecl_tools/utils/templatetags/filters.py'...
***   File "./lib/python3.5/site-packages/ecl_tools/utils/templatetags/filters.py", line 45
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
